Bug tracker at http://code.google.com/p/psutil/issues

0.2.2 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue 163: per-process associated terminal (TTY).

BUGFIXES

 * Issue 159: SetSeDebug() does not close handles or unset impersonation on
   return.
 * Issue 164: wait function raises a TimeoutException when a process returns
   -1 (Windows).
 * Issue 165: process.status raises an unhandled exception.
 * Issue 166: get_memory_info() leaks handles hogging system resources.
 * Issue 168: psutil.cpu_percent() returns erroneous results when used in
   non-blocking mode.  (patch by Philip Roberts)

0.2.1 - 2011-03-20
------------------

NEW FEATURES

 * Issue 64: per-process I/O counters.
 * Issue 116: per-process wait() (wait for process to terminate and return its
   exit code).
 * Issue 134: per-process get_threads() returning information (id, user and
   kernel times) about threads opened by process.
 * Issue 136: process executable path on FreeBSD is now determined by asking
   the kernel instead of guessing it from cmdline[0].
 * Issue 137: per-process real, effective and saved user and group ids.
 * Issue 140: system boot time.
 * Issue 142: per-process get and set niceness (priority).
 * Issue 143: per-process status.
 * Issue 147: per-process I/O nice (priority) - Linux only.
 * Issue 148: psutil.Popen class which tidies up subprocess.Popen and
   psutil.Process in a unique interface.
 * Issue 152: (OSX) get_process_open_files() implementation has been rewritten
   in C and no longer relies on lsof resulting in a 3x speedup.
 * Issue 153: (OSX) get_process_connection() implementation has been rewritten
   in C and no longer relies on lsof resulting in a 3x speedup.

BUGFIXES

 * Issue 83: process cmdline is empty on OSX 64-bit.
 * Issue 130: a race condition can cause IOError exception be raised on
   Linux if process disappears between open() and subsequent read() calls.
 * Issue 145: WindowsError was raised instead of psutil.AccessDenied when using